<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/name_"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="20dp"
		android:id="@+id/name"
		android:text="@string/krushang_parekh"/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/upi_id"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="20dp"
		android:id="@+id/upi_id"
		android:text="@string/_905480_paytm"/>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/amount"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="20dp"
		android:id="@+id/amount_et"
		android:inputType="numberDecimal"
		android:text="@string/_1"/>


	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/note"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="20dp"
		android:id="@+id/note"
		android:text="@string/cloth_store_test_upi_payment"/>

	<Button
		android:id="@+id/send"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="20dp"
		android:background="@color/blue"
		android:text="@string/pay_now" />


</LinearLayout>