<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:fitsSystemWindows="true"
	android:orientation="vertical"
	android:padding="10dp">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:orientation="vertical">

			<ImageView
				android:layout_width="334dp"
				android:layout_height="184dp"
				android:layout_gravity="center"
				android:src="@drawable/fashionmain" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:padding="5dp"
				android:paddingStart="10dp"
				android:text="@string/Hello_There_welcome_back"
				android:textColor="#F3247FE6"
				android:textSize="35sp"
				android:transitionName="logo_text" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:paddingStart="10dp"

				android:text="@string/signup_to_continue"
				android:textColor="@color/black"
				android:textSize="14sp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:orientation="vertical">

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/mEmailedittext"
						android:layout_width="match_parent"
						android:layout_height="42dp"
						android:text=""
						android:hint="@string/email"
						android:background="@drawable/box"
						android:maxLength="32"
						android:textSize="15dp"
						android:paddingStart="20dp"
						android:singleLine="true"
						android:textColor="@color/black" />

				</com.google.android.material.textfield.TextInputLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"
					android:orientation="vertical">

					<com.google.android.material.textfield.TextInputLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:passwordToggleEnabled="true">

						<EditText
							android:id="@+id/passwordedittext"
							android:layout_width="match_parent"
							android:layout_height="42dp"
							android:importantForAutofill="yes"
							android:text=""
							android:hint="@string/password"
							android:background="@drawable/box"

							android:inputType="number"
							android:textSize="15dp"
							android:maxLength="10"
							android:paddingStart="20dp"
							android:singleLine="true"
							android:textColor="@color/black"
							app:passwordToggleEnabled="true" />

					</com.google.android.material.textfield.TextInputLayout>
				</LinearLayout>

			</LinearLayout>

			<Button
				android:id="@+id/buttonforgetpassword"
				android:layout_width="wrap_content"
				android:layout_height="24dp"
				android:layout_gravity="right"
				android:layout_margin="15dp"
				android:background="#00000000"
				android:backgroundTint="@color/prpal"
				android:shadowColor="@color/black"
				android:text="@string/forget_password"
				android:textSize="12dp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:orientation="vertical">


				<Button
					android:id="@+id/BTNsignin"
					android:layout_width="311dp"
					android:layout_height="42dp"
					android:layout_gravity="center"
					android:layout_margin="20dp"
					android:layout_marginBottom="5dp"
					android:background="@drawable/box"
					android:backgroundTint="#F3247FE6"
					android:text="Sign In"
					android:textColor="@color/white" />

				<Button
					android:id="@+id/text_new_user"
					android:layout_width="260dp"
					android:layout_height="40dp"
					android:layout_gravity="center"
					android:background="@drawable/box"
					android:text="@string/new_user_sign_up"
					android:textColor="@color/black" />


				<ProgressBar
					android:id="@+id/progressBar"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_gravity="center"
					android:layout_marginTop="20dp"
					android:visibility="visible" />
			</LinearLayout>



		</LinearLayout>

	</ScrollView>


</RelativeLayout>




