<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mycartitemview"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="30dp"
	android:elevation="5dp"
	app:cardCornerRadius="10dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical"
		android:padding="10dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:weightSum="2">

		<ImageView
			android:id="@+id/IVcartimage"
			android:layout_width="160dp"
			android:layout_height="147dp"
			android:contentDescription="@string/allan_man_tshirt"
			android:src="@drawable/bull" />

		<ImageView
			android:id="@+id/selectdelet"
			android:layout_width="50dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="30dp"
			android:layout_marginTop="60dp"
			android:src="@drawable/ic_baseline_delete_24" />
	</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:weightSum="2">

			<TextView
				android:id="@+id/tvnameitem"
				android:layout_width="30dp"
				android:layout_height="match_parent"
				android:layout_weight="0.9"
				android:text="@string/name"
				android:textSize="16sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/currentname"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="bull"
				android:textSize="16sp"
				android:textStyle="bold" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="2">

			<TextView
				android:id="@+id/tvrsitem"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/rs"
				android:textSize="16sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/currentRs"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="ooooo"
				android:textSize="16sp"
				android:textStyle="bold" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:weightSum="2">

			<TextView
				android:id="@+id/tvsizeitem"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/sizesml"
				android:textSize="16sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/TVcurrent_size"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="kkkk "
				android:textSize="16sp"
				android:textStyle="bold"
				tools:ignore="DuplicateIds" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:weightSum="2">

			<TextView
				android:id="@+id/tvcoloritem"

				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="Color "
				android:textSize="16sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/TVcurrent_color"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text=" ppppp"
				android:textSize="16sp"
				android:textStyle="bold" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:weightSum="2"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:layout_marginBottom="5dp"
			android:weightSum="2">

			<TextView
				android:id="@+id/tvsubtotalitem"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/subtotal"
				android:textSize="16sp"
				android:textStyle="bold" />


			<TextView
				android:id="@+id/total___price"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="91000,20 "
				android:textSize="16sp"
				android:textStyle="bold" />

		</LinearLayout>

		<!--<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:weightSum="2">

			<TextView
				android:id="@+id/tvtotaleQunatityitem"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text=" "
				android:textSize="16sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/total_quantity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text=" "
				android:textSize="16sp"
				android:textStyle="bold" />

		</LinearLayout>-->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:weightSum="2">


			<!--<LinearLayout
				android:layout_width="148dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginTop="70dp"
				android:orientation="horizontal">


				<Button
					android:id="@+id/minus_button2"
					android:layout_width="40dp"
					android:layout_height="25dp"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="5dp"
					android:background="@drawable/btnbox"
					android:backgroundTint="@color/ligthblue"
					android:text="-" />

				<EditText
					android:id="@+id/number0"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:cursorVisible="false"
					android:gravity="center"
					android:inputType="number"
					android:padding="5dp"
					android:text="@string/_0"
					android:textSize="20sp" />

				<Button
					android:id="@+id/plus_button2"
					android:layout_width="40dp"
					android:layout_height="25dp"
					android:layout_marginStart="5dp"
					android:layout_marginLeft="10dp"
					android:background="@drawable/btnbox"
					android:backgroundTint="@color/ligthblue"
					android:text="+" />
			</LinearLayout>-->



		</LinearLayout>

	</LinearLayout>

</androidx.cardview.widget.CardView>
